<resources>
    <string name="app_name">doctors_app</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="se7ty">Se7ty</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="se7ty_for_doctors">se7ty for Doctors</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="log_in">log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_now">Register now</string>
    <string name="title_in_english">Title in English</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="full_name_in_english">Full Name in English</string>
    <string name="date_of_brith">Date Of Brith</string>
    <string name="description_in_english">Description in English</string>
    <string name="description_in_arbic">Description in Arbic</string>
    <string name="medical_id_numer">Medical ID Numer</string>
    <string name="medical_title">Medical Title</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="spoken_language">Spoken Language</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="specialty">Specialty</string>
    <string name="enter_your_phone_number">Enter Your phone number</string>
    <string name="enter_your_emaill">Enter your Email</string>
    <string name="enter_your_pasword">Enter your Pasword</string>
    <string name="re_enter_your_password">RE-Enter your Password</string>
    <string name="select_your_specialist">Select Your Specialist</string>
    <string name="agree_on">Agree On</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="full_name_in_arabic">Full Name in Arabic</string>
    <string name="select_data_of_brirth">ٍSelect data of brirth</string>
    <string name="description">Description</string>
    <string name="descrpition_in_arabic">Descrpition in Arabic</string>
    <string name="select_your_medical_id_photo">Select Your medical id Photo</string>
    <string name="select_your_country">Select your Country</string>
    <string name="select_your_city">Select Your City</string>
    <string name="select_spoken_langusage">Select Spoken Langusage</string>
    <string name="dont_have_account_register">dont have account ? Register</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="select_title">Select Title</string>
    <string name="log_out">Log out</string>
    <string name="enter_email_recive">Enter your Email and you will recive Massge in few Secound</string>
    <string name="send_password">Send Password</string>
    <string name="speialtiest">Speialtiest</string>
    <string name="search">Search</string>
    <string name="personal_information">Personal Information</string>
    <string name="start_chat">Start Chat</string>
    <string name="view_emr">View EMR</string>
    <string name="add_time">Add Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="from_time">from Time</string>
    <string name="to_time">to Time</string>
    <string name="doctor_info">doctor info</string>
    <string name="save">Save</string>
    <string name="pick_your_position">pick your position</string>
    <string name="your_location">your location</string>
    <string name="patient_info">Patient Info</string>
    <string name="medical_test">Medical Test</string>
    <string name="medication">Medication</string>
    <string name="medication_name">Medication Name</string>
    <string name="view_attachement">View Attachement</string>
    <string name="test_result">Test Result</string>
    <string name="test_date">Test Date</string>
    <string name="lap_name">Lap Name</string>
    <string name="pricee_fees">Pricee Fees</string>
    <string name="price_follow_up">Price Follow Up</string>

</resources>