<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LogInFragment">

    <TextView
        android:id="@+id/textView2"
        style="@style/CustomText_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:text="@string/se7ty"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/CustomText_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/se7ty_for_doctors"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/CustomText_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sing in to your account"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/CustomText_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/email_et_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_et_login_conatiner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:endIconMode="password_toggle"
        android:hint="@string/enter_your_password"
        app:layout_constraintEnd_toEndOf="@+id/email_et_login"
        app:layout_constraintStart_toStartOf="@+id/email_et_login"
        app:layout_constraintTop_toBottomOf="@+id/email_et_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        app:backgroundTint="@color/green"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/password_et_login_conatiner"
        app:layout_constraintStart_toStartOf="@+id/password_et_login_conatiner"
        app:layout_constraintTop_toBottomOf="@+id/password_et_login_conatiner" />

    <TextView
        android:id="@+id/forget_tv_login"
        style="@style/CustomText_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/forget_password"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/login_btn_login"
        app:layout_constraintStart_toStartOf="@+id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

    <TextView
        android:id="@+id/register_tv_login"
        style="@style/CustomText_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dont_have_account_register"
        app:layout_constraintEnd_toEndOf="@+id/forget_tv_login"
        app:layout_constraintStart_toStartOf="@+id/forget_tv_login"
        app:layout_constraintTop_toBottomOf="@+id/forget_tv_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/green"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

</androidx.constraintlayout.widget.ConstraintLayout>