<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forget_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.ForgetPasswordFragment">

    <TextView
        android:id="@+id/textView3"
        style="@style/CustomText_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forget_password"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/CustomText_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_email_recive"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/CustomText_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/email_et_forgetpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/back_btn_forgetpass"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/none"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_Pass_btn_forgetpass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/send_password"
        app:backgroundTint="@color/green"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/email_et_forgetpass"
        app:layout_constraintStart_toStartOf="@+id/email_et_forgetpass"
        app:layout_constraintTop_toBottomOf="@+id/email_et_forgetpass" />

    <ProgressBar
        android:id="@+id/progress_forget"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/green"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>