<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.body.MyScheduleFragment" >

    <ProgressBar
        android:id="@+id/prob_my_schedula_graf"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/add_time_btn"
        app:layout_constraintEnd_toEndOf="@+id/et_date_picker_cohfdntainer"
        app:layout_constraintStart_toStartOf="@+id/et_date_picker_cohfdntainer"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/add_time_btn"
        style="@style/CustomOutLineButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_time"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/et_date_picker_cohfdntainer" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_date_picker_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/from_time"
            android:textColorHint="@color/background_tool"
            app:boxStrokeColor="@color/background_tool">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pick_time_from_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_time_picker_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/to_time"
            android:textColorHint="@color/background_tool"
            app:boxStrokeColor="@color/background_tool">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pick_time_to_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_date_picker_cohfdntainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:hint="@string/pick_date"
        android:textColorHint="@color/background_tool"
        app:boxStrokeColor="@color/background_tool"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pick_date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recy_data_schedula_frag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_time_btn" />

    <ProgressBar
        android:id="@+id/progr_recy_my_schedula_graf"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recy_data_schedula_frag" />
</androidx.constraintlayout.widget.ConstraintLayout>